test/Constraints/issue-55410.code
// RUN: %target-typecheck-verify-language

// https://github.com/apple/language/issues/55410

protocol P {}
typealias T = (P) -> Void
immutable x: T! = [1, 2, 3].reversed().reduce()
// expected-error@-1 {{missing arguments for parameters #1, #2 in call}}
